add game details and icon for Medievia

--- a/src/mudlet.qrc
+++ b/src/mudlet.qrc
@@ -130,6 +130,7 @@
         <file>icons/media-seek-backward.png</file>
         <file>icons/media-seek-forward.png</file>
         <file>icons/media-tape.png</file>
+        <file>icons/medievia.png</file>
         <file>icons/midnightsun2.png</file>
         <file>icons/module-manager.png</file>
         <file>icons/morgengrauen_480x120.png</file>
